# todays_puzzle

./: README.md
algorithms/binary_tree/: main.cpp
algorithms/hash_tab/: main.cpp
algorithms/radon_transform/: main.cpp
c++/make_shared/: main.cpp
c++/polymorphism_costs/: Timer.cpp  Timer.hpp  main.cpp
c++/structured_binding/: main.cpp
c/designated_initializers/: main.c
constexpr_function/: main.cpp
constructor_virt_call/: main.cpp
design_patterns/abstract_factory/: Makefile
design_patterns/abstract_factory/include/: DynamicThresholdBlockFactory.hpp  EnhanceBlueBlock.hpp  (+17 more)
design_patterns/factory_method/: main.cpp
design_patterns/prototype/: main.cpp
design_patterns/strategy/: ProgramOptions.json  ProgramOptions.txt  main.cpp
fold_expressions/: main.cpp
futures/: main.cpp
if_constexpr/: main.cpp
literals/: main.cpp
map_index_operator/: main.cpp
multiple_inheritance_function_overloading/: MaintenanceStorage.hpp  Observer.hpp  main.cpp
prach_generation/: prach.py
quick_freq_shift/: quick_freq_shift.m
return_value_optimization/: main.cpp
shared_memory/: main.cpp
signal_processing/nonsystematic_polynomial_code/: main.cpp
signal_processing/parity_linear_codes/: main.cpp
std_vector_bool/: main.cpp
tools/callgrind/: main.cpp
tools/clang-format/: .clang-format  main.cpp
tools/clang-tidy/: CMakeLists.txt  main.cpp
tools/clang-tidy/cmake/: ClangTidy.cmake
tools/perf/: main.cpp
try_catch_initialization_list/: main.cpp
using/: main.cpp
variable_initialization/: main.cpp
watchpoint/: main.cpp
zip_iterator/: main.cpp
(+17 files in other folders)
